deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-backend
  template:
    metadata:
      labels:
        app: ledger-backend
    spec:
      containers:
        - name: ledger-backend
          image: sm7rth/my-ledger-backend:b02802e665333a506c6b6835a236ee1cba0f6349
          ports:
            - containerPort: 2231
