deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledger-worker
  template:
    metadata:
      labels:
        app: ledger-worker
    spec:
      containers:
        - name: ledger-worker
          image: sm7rth/my-ledger-worker:dca125ed5cacd9073e1017957f8e48f916db8ea1
          ports:
            - containerPort: 3002
