service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-backend-service
spec:
  selector:
    app: ledger-backend
  ports:
    - port: 80
      targetPort: 2231
  type: ClusterIP
